[tool.poetry]
name = "saucie"
version = "0.1.0"
description = ""
authors = ["amrukwa <a.mrukwa00@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<3.11"
numpy = "^1.23.4"
scikit-learn = "^1.1.3"
tensorflow = "^2.10.1"
streamlit = "^1.14.1"
plotly = "^5.11.0"
pytest = "^7.2.0"

[tool.poetry.dev-dependencies]
tensorflow = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
